force-app/main/default/objects/Bankruptcy__c/Bankruptcy__c.object-meta.xml
<CustomObject>
    <description>This object will be used to track bankruptcy information for an account</description>
    <label>Bankruptcy</label>
    <nameField>
        <displayFormat>BKCY-{000000}</displayFormat>
        <label>Bankruptcy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bankruptcies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>