force-app/main/default/objects/Bankruptcy__c/fields/Automatic_Stay__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Stay__c</fullName>
    <label>Automatic Stay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>