force-app/main/default/objects/Bankruptcy__c/fields/Bankruptcy_Chapter__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Chapter__c</fullName>
    <label>Bankruptcy Chapter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chapter 7</fullName>
            </value>
            <value>
                <fullName>Chapter 9</fullName>
            </value>
            <value>
                <fullName>Chapter 11</fullName>
            </value>
            <value>
                <fullName>Chapter 12</fullName>
            </value>
            <value>
                <fullName>Chapter 13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>