force-app/main/default/objects/Bankruptcy__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Court</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Bankruptcies</relationshipLabel>
    <relationshipName>Bankruptcies</relationshipName>
    <type>Lookup</type>
</CustomField>