force-app/main/default/objects/Bankruptcy__c/fields/Court_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Court_Case_Number__c</fullName>
    <label>Court Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>