force-app/main/default/objects/Bankruptcy__c/fields/Date_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Date_Terminated__c</fullName>
    <inlineHelpText>Date that bankruptcy case was terminated/closed by court</inlineHelpText>
    <label>Date Terminated</label>
    <type>Date</type>
</CustomField>