force-app/main/default/objects/Bankruptcy__c/fields/Discharge_Granted__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discharge Granted</label>
    <type>Checkbox</type>
</CustomField>