force-app/main/default/objects/Bankruptcy__c/fields/No_Asset__c.field-meta.xml
<CustomField>
    <fullName>No_Asset__c</fullName>
    <label>No Asset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>