force-app/main/default/objects/Bankruptcy__c/fields/Objection_to_Discharge_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Objection_to_Discharge_Deadline__c</fullName>
    <label>Objection to Discharge Deadline</label>
    <type>Date</type>
</CustomField>