force-app/main/default/objects/Bankruptcy__c/fields/Proof_of_Claim_Filing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Claim_Filing_Deadline__c</fullName>
    <label>Proof of Claim Filing Deadline</label>
    <type>Date</type>
</CustomField>