force-app/main/default/objects/Bankruptcy__c/validationRules/Date_of_Discharge_Cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Discharge_Cannot_be_Blank</fullName>
    <active>true</active>
    <description>If Discharge Granted true, date of discharge cannot be blank.</description>
    <errorConditionFormula>Discharge_Granted__c = True &amp;&amp;   ISBLANK(Date_of_Discharge__c )</errorConditionFormula>
    <errorDisplayField>Date_of_Discharge__c</errorDisplayField>
    <errorMessage>You must enter the Date of Discharge</errorMessage>
</ValidationRule>